--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "reportMissingModuleSource": "none"
     },
     "python.analysis.typeshedPaths": [
-        ".vscode/Pico-W-Stub"
+        ".vscode/Pico-W-Stub",
     ],
     "python.analysis.extraPaths": [
-        ".vscode/Pico-W-Stub"
-    ]
+        ".vscode/Pico-W-Stub",
+    ],
+    "micropico.syncFolder": "",
+    "micropico.openOnStart": true
 }
